Primer commit con el proyecto funcionando ya se puede comenzar a trabajar en probar editores en nuevas ramas

--- a/ApiBackend/appsettings.Development.json
+++ b/ApiBackend/appsettings.Development.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SQLite": "Data Source=MyDataSource.db",
-    "POC": "Server=devserver04;Database=POC;Trusted_Connection=True;App=EntityFramework;"
+    "SQLServer": "Server=devserver04;Database=POC;Trusted_Connection=True;App=EntityFramework;"
   }
 }
