--- a/EditoresDeTexto/angular.json
+++ b/EditoresDeTexto/angular.json
@@ -28,10 +28,13 @@
               "src/web.config"
             ],
             "styles": [
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.snow.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/quill/dist/quill.js"
             ]
           },
           "configurations": {
