--- a/EditoresDeTexto/package.json
+++ b/EditoresDeTexto/package.json
@@ -26,8 +26,10 @@
     "ngx-bootstrap": "^5.1.2",
     "ngx-clipboard": "^12.3.0",
     "ngx-editor": "^4.1.0",
+    "ngx-quill": "^8.0.0",
     "ngx-spinner": "^7.0.0",
     "ngx-toastr": "^11.1.2",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
