--- a/EditoresDeTexto/package.json
+++ b/EditoresDeTexto/package.json
@@ -22,6 +22,7 @@
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
+    "ng2-ckeditor": "^1.2.1",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^5.1.2",
     "ngx-clipboard": "^12.3.0",
