--- a/EditoresDeTexto/package.json
+++ b/EditoresDeTexto/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "^8.2.11",
+    "ckeditor4-angular": "^1.1.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
