--- a/EditoresDeTexto/package.json
+++ b/EditoresDeTexto/package.json
@@ -27,8 +27,7 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^5.1.2",
     "ngx-clipboard": "^12.3.0",
-    "ngx-editor": "^4.1.0",
-    "ngx-quill": "^8.0.0",
+    "ngx-quill": "8.0.0",
     "ngx-spinner": "^7.0.0",
     "ngx-toastr": "^11.1.2",
     "quill": "^1.3.7",
