--- a/EditoresDeTexto/package.json
+++ b/EditoresDeTexto/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^9.1.0",
     "@angular/animations": "^8.2.11",
     "@angular/common": "~8.2.11",
     "@angular/compiler": "~8.2.11",
@@ -20,6 +21,8 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "^8.2.11",
+    "@compodoc/compodoc": "^1.1.11",
+    "@types/highlight.js": "^9.12.3",
     "ckeditor4-angular": "^1.1.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
@@ -29,8 +32,6 @@
     "ngx-bootstrap": "^5.1.2",
     "ngx-clipboard": "^12.3.0",
     "ngx-highlight-js": "^2.1.1",
-    "@types/highlight.js": "^9.12.3",
-    "@compodoc/compodoc": "^1.1.11",
     "ngx-quill": "8.0.0",
     "ngx-spinner": "^7.0.0",
     "ngx-toastr": "^11.1.2",
@@ -40,15 +41,15 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.4",
+    "@angular-devkit/build-angular": "~0.803.25",
+    "@angular/cli": "~8.3.26",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
