--- a/EditoresDeTexto/package.json
+++ b/EditoresDeTexto/package.json
@@ -13,14 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "^9.1.0",
-    "@angular/animations": "^8.2.11",
-    "@angular/common": "~8.2.11",
-    "@angular/compiler": "~8.2.11",
-    "@angular/core": "~8.2.11",
-    "@angular/forms": "~8.2.11",
-    "@angular/platform-browser": "~8.2.11",
-    "@angular/platform-browser-dynamic": "~8.2.11",
-    "@angular/router": "^8.2.11",
+    "@angular/animations": "^9.1.0",
+    "@angular/common": "~9.1.0",
+    "@angular/compiler": "~9.1.0",
+    "@angular/core": "~9.1.0",
+    "@angular/forms": "~9.1.0",
+    "@angular/platform-browser": "~9.1.0",
+    "@angular/platform-browser-dynamic": "~9.1.0",
+    "@angular/router": "^9.1.0",
     "@compodoc/compodoc": "^1.1.11",
     "@types/highlight.js": "^9.12.3",
     "ckeditor4-angular": "^1.1.0",
@@ -31,25 +31,25 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^5.1.2",
     "ngx-clipboard": "^12.3.0",
-    "ngx-highlight-js": "^2.1.1",
+    "ngx-highlight-js": "^9.0.0",
     "ngx-quill": "8.0.0",
     "ngx-spinner": "^9.0.1",
     "ngx-toastr": "^11.1.2",
     "quill": "^1.3.7",
     "rxjs": "~6.5.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/cli": "~8.3.26",
-    "@angular/compiler-cli": "~8.2.11",
-    "@angular/language-service": "~8.2.11",
+    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular/cli": "~9.1.0",
+    "@angular/compiler-cli": "~9.1.0",
+    "@angular/language-service": "~9.1.0",
     "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
@@ -60,6 +60,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
