--- a/EditoresDeTexto/package.json
+++ b/EditoresDeTexto/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
-    "@angular/cli": "~9.1.0",
+    "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
     "@types/file-saver": "^2.0.1",
