--- a/ApiBackend/appsettings.Debug.json
+++ b/ApiBackend/appsettings.Debug.json
@@ -1,4 +1,5 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
@@ -6,7 +7,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
+  "SwaggerOptions": {
+    "Description": "API Backend Editor de texto - Debug",
+    "UIEndpoint": "/swagger/v1/swagger.json",
+    "Version": "v1"
+  },
   "ConnectionStrings": {
     "SQLite": "Data Source=MyDataSource.db",
     "SQLServer": "Server=devserver04;Database=POC;Trusted_Connection=True;App=EntityFramework;",
