--- a/ApiBackend/appsettings.UAT.json
+++ b/ApiBackend/appsettings.UAT.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "SwaggerOptions": {
+    "Description": "API Backend Editor de texto - UAT",
+    "UIEndpoint": "/distribucion/api/swagger/v1/swagger.json",
+    "Version": "v1"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SQLite": "Data Source=MyDataSource.db",
