Se agrega singleton al metodo CreateContex de ConcreteContextFctory

--- a/ApiFronted/ApiAngular.csproj
+++ b/ApiFronted/ApiAngular.csproj
@@ -19,28 +19,13 @@
     <OutputPath>bin\Release\netcoreapp3.1</OutputPath>
   </PropertyGroup>
   
-  <!--<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UAT|AnyCPU'">
-    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <DefineConstants>TRACE;UAT</DefineConstants>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Testing|AnyCPU'">
-    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <DefineConstants>TRACE;TESTING</DefineConstants>
-  </PropertyGroup>-->
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 
-  <!--<ItemGroup>
+  <ItemGroup>
     <Content Update="appsettings.Debug.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
@@ -56,7 +41,7 @@
     <Content Update="appsettings.UAT.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>-->
+  </ItemGroup>
 
   <!--<ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" appsettings_1debug_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
