Refactor: ApiAngular a ApiFrontend y en nombre de ensamblado y espacio de nombres

--- a/ApiFronted/ApiFronted.csproj
+++ b/ApiFronted/ApiFronted.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <Configurations>Debug;Release;UAT;Production;Testing</Configurations>
+    <AssemblyName>ApiFronted</AssemblyName>
+    <RootNamespace>ApiFronted</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp3.1\ApiAngular.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp3.1\ApiFronted.xml</DocumentationFile>
     <OutputPath>bin\Debug\netcoreapp3.1</OutputPath>
     <WarningLevel>4</WarningLevel>
     <NoWarn>1701;1702;1591;</NoWarn>
@@ -15,7 +17,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netcoreapp3.1\ApiBackend.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp3.1\$(AssemblyName).xml</DocumentationFile>
     <OutputPath>bin\Release\netcoreapp3.1</OutputPath>
   </PropertyGroup>
   
@@ -43,10 +45,14 @@
     </Content>
   </ItemGroup>
 
-  <!--<ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" appsettings_1debug_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" appsettings_1debug_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="copy /Y &quot;$(SolutionDir)\ApiAngular\appsettings.$(Configuration).json&quot; &quot;$(SolutionDir)\ApiAngular\appsettings.Production.json" />
-  </Target>-->
+    <Exec Command="copy /Y &quot;$(SolutionDir)\$(AssemblyName)\appsettings.$(Configuration).json&quot; &quot;$(SolutionDir)\$(AssemblyName)\appsettings.Production.json" />
+  </Target>
 
 </Project>
