--- a/ApiFronted/appsettings.Production.json
+++ b/ApiFronted/appsettings.Production.json
@@ -3,14 +3,14 @@
     "url": "https://localhost:44365/"
   },
   "SwaggerOptions": {
-    "Description": "API Frontend Editor de texto - Production",
+    "Description": "API Frontend Editor de texto - Debug",
     "UIEndpoint": "/swagger/v1/swagger.json",
     "Version": "v1"
   },
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
