--- a/ApiFronted/appsettings.UAT.json
+++ b/ApiFronted/appsettings.UAT.json
@@ -3,7 +3,7 @@
     "url": "http://serviciosuat.fepba.gov.ar/"
   },
   "SwaggerOptions": {
-    "Description": "API FrontEnd Editor de texto - UAT",
+    "Description": "API Frontend Editor de texto - UAT",
     "UIEndpoint": "/distribucion/api/swagger/v1/swagger.json",
     "Version": "v1"
   },
