--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Configurations>Debug;Release;UAT;Production;Testing</Configurations>
+    <Configurations>Debug;Release;UAT;Production;Testing;Personal</Configurations>
   </PropertyGroup>
 
 </Project>
