refactor: HttpHelperRestConections, porque no funcionaba bien con kestrel.\n Update: Se cambio la configuracion de logging a algo mas apropiado para produccion.\n feat: Se añadio un script (multiproyec.ps1) en powershell que inicia ambos proyectos al ejecutarlo en powershell

--- a/ApiBackend/appsettings.Debug.json
+++ b/ApiBackend/appsettings.Debug.json
@@ -2,8 +2,8 @@
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Warning",
+      "Default": "Information",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
