--- a/ApiBackend/Properties/launchSettings.json
+++ b/ApiBackend/Properties/launchSettings.json
@@ -21,9 +21,9 @@
       "launchBrowser": true,
       "launchUrl": "api/values",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Personal"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:44365;http://localhost:64709"
     }
   }
 }
