--- a/ApiBackend/appsettings.Personal.json
+++ b/ApiBackend/appsettings.Personal.json
@@ -2,8 +2,8 @@
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Warning",
+      "Default": "Information",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
