--- a/ApiBackend/appsettings.Production.json
+++ b/ApiBackend/appsettings.Production.json
@@ -2,9 +2,9 @@
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
   "SwaggerOptions": {
