--- a/ApiFronted/ApiFronted.csproj
+++ b/ApiFronted/ApiFronted.csproj
@@ -53,10 +53,10 @@
     </Content>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" appsettings_1debug_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <!--<ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" appsettings_1debug_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="copy /Y &quot;$(SolutionDir)\$(AssemblyName)\appsettings.$(Configuration).json&quot; &quot;$(SolutionDir)\$(AssemblyName)\appsettings.Production.json" />
-  </Target>
+  </Target>-->
 
 </Project>
