--- a/ApiFronted/Properties/launchSettings.json
+++ b/ApiFronted/Properties/launchSettings.json
@@ -16,14 +16,14 @@
         "ASPNETCORE_ENVIRONMENT": "$(Configuration)"
       }
     },
-    "ApiAngular": {
-      "commandName": "IISExpress",
+    "ApiFrontend": {
+      "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Personal"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:44315;http://localhost:54387"
     }
   }
 }
