--- a/ApiFronted/appsettings.Debug.json
+++ b/ApiFronted/appsettings.Debug.json
@@ -1,6 +1,7 @@
 {
   "BackendeUrl": {
-    "url": "https://localhost:44365/"
+    "url": "https://localhost:44365/",
+    "proxy":"proxy1.fepba.gov.ar:8080"
   },
   "SwaggerOptions": {
     "Description": "API Frontend Editor de texto - Debug",
@@ -10,8 +11,8 @@
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Warning",
+      "Default": "Information",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
