--- a/ApiFronted/appsettings.Production.json
+++ b/ApiFronted/appsettings.Production.json
@@ -1,18 +1,19 @@
 {
   "BackendeUrl": {
-    "url": "https://localhost:44365/"
+    "url": "https://localhost:44365/",
+    "proxy":"proxy1.fepba.gov.ar:8080"
   },
   "SwaggerOptions": {
-    "Description": "API Frontend Editor de texto - (Personal) - Debug",
+    "Description": "API Frontend Editor de texto - Debug",
     "UIEndpoint": "/swagger/v1/swagger.json",
     "Version": "v1"
   },
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Warning",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   }
 }
