--- a/ApiFronted/appsettings.Release.json
+++ b/ApiFronted/appsettings.Release.json
@@ -1,6 +1,7 @@
 {
   "BackendeUrl": {
-    "url": "http://servicios.fepba.gov.ar/"
+    "url": "http://servicios.fepba.gov.ar/",
+    "proxy":"proxy1.fepba.gov.ar:8080"
   },
   "SwaggerOptions": {
     "Description": "API Frontend Editor de texto - Release",
@@ -10,9 +11,9 @@
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Warning",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   }
 }
