--- a/EditoresDeTexto/package.json
+++ b/EditoresDeTexto/package.json
@@ -8,7 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "compodoc": "compodoc -p tsconfig.json -s"
+    "compodoc": "compodoc -p tsconfig.json -s",
+    "dtt": "dotnet test ../",
+    "ngs": "ng serve -c studio"
   },
   "private": true,
   "dependencies": {
