--- a/ApiBackend/appsettings.Release.json
+++ b/ApiBackend/appsettings.Release.json
@@ -14,6 +14,6 @@
   },
   "ConnectionStrings": {
     "SQLite": "Data Source=MyDataSource.db",
-    "SQLServer": "Server=devserver04;Database=POC;Trusted_Connection=True;App=EntityFramework;",
+    "SQLServer": "Server=devserver04;Database=POC;Trusted_Connection=True;App=EntityFramework;"
   }
 }
