--- a/ApiFronted/appsettings.Production.json
+++ b/ApiFronted/appsettings.Production.json
@@ -4,8 +4,8 @@
     "proxy":"proxy1.fepba.gov.ar:8080"
   },
   "SwaggerOptions": {
-    "Description": "API Frontend Editor de texto - Debug",
-    "UIEndpoint": "/swagger/v1/swagger.json",
+    "Description": "API Frontend Editor de texto - Production",
+    "UIEndpoint": "<appName>/swagger/v1/swagger.json",
     "Version": "v1"
   },
   "AllowedHosts": "*",
