--- a/ApiBackend/appsettings.Production.json
+++ b/ApiBackend/appsettings.Production.json
@@ -2,19 +2,18 @@
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Warning"
+      "Default": "Information",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "SwaggerOptions": {
-    "Description": "API Backend Editor de texto - Production",
-    "UIEndpoint": "/swagger/v1/swagger.json",
+    "Description": "API Backend Editor de texto - (Personal) - Debug",
+    "UIEndpoint": "<appName>/swagger/v1/swagger.json",
     "Version": "v1"
   },
-
   "ConnectionStrings": {
     "SQLite": "Data Source=MyDataSource.db",
-    "SQLServer": "Server=devserver04;Database=POC;Trusted_Connection=True;App=EntityFramework;",
+    "SQLServer": "Server=devserver04;Database=POC;Trusted_Connection=True;App=EntityFramework;"
   }
 }
