--- a/ApiFronted/appsettings.Release.json
+++ b/ApiFronted/appsettings.Release.json
@@ -5,7 +5,7 @@
   },
   "SwaggerOptions": {
     "Description": "API Frontend Editor de texto - Release",
-    "UIEndpoint": "/distribucion/api/swagger/v1/swagger.json",
+    "UIEndpoint": "/swagger/v1/swagger.json",
     "Version": "v1"
   },
   "AllowedHosts": "*",
