--- a/ApiFronted/appsettings.UAT.json
+++ b/ApiFronted/appsettings.UAT.json
@@ -5,7 +5,7 @@
   },
   "SwaggerOptions": {
     "Description": "API Frontend Editor de texto - UAT",
-    "UIEndpoint": "/distribucion/api/swagger/v1/swagger.json",
+    "UIEndpoint": "<appName>/swagger/v1/swagger.json",
     "Version": "v1"
   },
   "AllowedHosts": "*",
